--- a/Views/Artistas/Delete.cshtml
+++ b/Views/Artistas/Delete.cshtml
@@ -2,10 +2,29 @@
 
 <h2>Eliminar Artista</h2>
 
-<p>¿Estás seguro que deseas eliminar el artista "@Model.Nombre"?</p>
+<h3>¿Estás seguro de que deseas eliminar a este artista?</h3>
 
-<form asp-action="DeleteConfirmed">
-    <input type="hidden" asp-for="ArtistasId" />
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a href="@Url.Action("Index")" class="btn btn-secondary">Cancelar</a>
-</form>
+<div>
+    <h4>@Model.Nombre</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            Género
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Genero
+        </dd>
+        <dt class="col-sm-2">
+            Edad
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Edad
+        </dd>
+    </dl>
+
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="ArtistasId" />
+        <button type="submit" class="btn btn-danger">Eliminar</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+    </form>
+</div>
