--- a/Views/Artistas/Create.cshtml
+++ b/Views/Artistas/Create.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Crear Artista</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label for="Nombre">Nombre </label>
         <input type="text" asp-for="Nombre" class="form-control" />
